ulNoActionsParser.java
// $ANTLR 3.0.1 ulNoActions.g 2018-04-07 12:15:18

        import AST.*;
        import Type.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class ulNoActionsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IF", "WHILE", "RETURN", "PRINT", "PRINTLN", "ELSE", "FLOATCONSTANT", "INTEGERCONSTANT", "CHARCONSTANT", "STRINGCONSTANT", "TRUE", "FALSE", "TYPE", "ID", "WS", "COMMENT", "'('", "')'", "','", "'{'", "'}'", "';'", "'='", "'=='", "'<'", "'+'", "'-'", "'*'", "'['", "']'"
    };
    public static final int PRINT=7;
    public static final int PRINTLN=8;
    public static final int COMMENT=19;
    public static final int RETURN=6;
    public static final int CHARCONSTANT=12;
    public static final int STRINGCONSTANT=13;
    public static final int ELSE=9;
    public static final int ID=17;
    public static final int WS=18;
    public static final int EOF=-1;
    public static final int IF=4;
    public static final int TYPE=16;
    public static final int TRUE=14;
    public static final int FLOATCONSTANT=10;
    public static final int INTEGERCONSTANT=11;
    public static final int WHILE=5;
    public static final int FALSE=15;

        public ulNoActionsParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[37+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "ulNoActions.g"; }



    HashMap memory = new HashMap();

    protected void mismatch (IntStream input, int ttype, BitSet follow)
            throws RecognitionException
    {
            throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet (IntStream input,
                                          RecognitionException e,
                                          BitSet follow)
            throws RecognitionException
    {
            reportError(e);
            throw e;
    }



    // $ANTLR start program
    // ulNoActions.g:44:1: program returns [Program prog] : (f= function )+ EOF ;
    public final Program program() throws RecognitionException {
        Program prog = null;

        Function f = null;


         prog = new Program();
        try {
            // ulNoActions.g:46:9: ( (f= function )+ EOF )
            // ulNoActions.g:46:11: (f= function )+ EOF
            {
            // ulNoActions.g:46:11: (f= function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TYPE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ulNoActions.g:46:12: f= function
            	    {
            	    pushFollow(FOLLOW_function_in_program52);
            	    f=function();
            	    _fsp--;
            	    if (failed) return prog;
            	    if ( backtracking==0 ) {
            	       prog.addElement(f); 
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return prog;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_program58); if (failed) return prog;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return prog;
    }
    // $ANTLR end program


    // $ANTLR start function
    // ulNoActions.g:49:1: function returns [Function f] : fd= functionDecl fb= functionBody ;
    public final Function function() throws RecognitionException {
        Function f = null;

        FunctionDeclaration fd = null;

        FunctionBody fb = null;


        try {
            // ulNoActions.g:50:9: (fd= functionDecl fb= functionBody )
            // ulNoActions.g:50:11: fd= functionDecl fb= functionBody
            {
            pushFollow(FOLLOW_functionDecl_in_function100);
            fd=functionDecl();
            _fsp--;
            if (failed) return f;
            pushFollow(FOLLOW_functionBody_in_function106);
            fb=functionBody();
            _fsp--;
            if (failed) return f;
            if ( backtracking==0 ) {
              f = new Function(fd,fb);
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return f;
    }
    // $ANTLR end function


    // $ANTLR start functionDecl
    // ulNoActions.g:54:1: functionDecl returns [FunctionDeclaration f] : ct= compoundType id= identifier '(' fp= formalParameters ')' ;
    public final FunctionDeclaration functionDecl() throws RecognitionException {
        FunctionDeclaration f = null;

        TypeNode ct = null;

        Identifier id = null;

        FormalParameterList fp = null;


        try {
            // ulNoActions.g:55:17: (ct= compoundType id= identifier '(' fp= formalParameters ')' )
            // ulNoActions.g:55:19: ct= compoundType id= identifier '(' fp= formalParameters ')'
            {
            pushFollow(FOLLOW_compoundType_in_functionDecl157);
            ct=compoundType();
            _fsp--;
            if (failed) return f;
            pushFollow(FOLLOW_identifier_in_functionDecl163);
            id=identifier();
            _fsp--;
            if (failed) return f;
            match(input,20,FOLLOW_20_in_functionDecl165); if (failed) return f;
            pushFollow(FOLLOW_formalParameters_in_functionDecl171);
            fp=formalParameters();
            _fsp--;
            if (failed) return f;
            match(input,21,FOLLOW_21_in_functionDecl173); if (failed) return f;
            if ( backtracking==0 ) {
               f = new FunctionDeclaration(ct, id, fp);
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return f;
    }
    // $ANTLR end functionDecl


    // $ANTLR start formalParameters
    // ulNoActions.g:60:1: formalParameters returns [FormalParameterList fpl] : (cpt= compoundType id= identifier (mf= moreFormals )* )? ;
    public final FormalParameterList formalParameters() throws RecognitionException {
        FormalParameterList fpl = null;

        TypeNode cpt = null;

        Identifier id = null;

        FormalParameter mf = null;


        fpl = new FormalParameterList();
        try {
            // ulNoActions.g:62:17: ( (cpt= compoundType id= identifier (mf= moreFormals )* )? )
            // ulNoActions.g:62:19: (cpt= compoundType id= identifier (mf= moreFormals )* )?
            {
            // ulNoActions.g:62:19: (cpt= compoundType id= identifier (mf= moreFormals )* )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==TYPE) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // ulNoActions.g:62:20: cpt= compoundType id= identifier (mf= moreFormals )*
                    {
                    pushFollow(FOLLOW_compoundType_in_formalParameters242);
                    cpt=compoundType();
                    _fsp--;
                    if (failed) return fpl;
                    pushFollow(FOLLOW_identifier_in_formalParameters248);
                    id=identifier();
                    _fsp--;
                    if (failed) return fpl;
                    if ( backtracking==0 ) {
                       fpl.addFormalParameter(new FormalParameter(cpt, id)); 
                    }
                    // ulNoActions.g:63:19: (mf= moreFormals )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==22) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // ulNoActions.g:63:20: mf= moreFormals
                    	    {
                    	    pushFollow(FOLLOW_moreFormals_in_formalParameters275);
                    	    mf=moreFormals();
                    	    _fsp--;
                    	    if (failed) return fpl;
                    	    if ( backtracking==0 ) {
                    	      fpl.addFormalParameter(mf); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }


            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fpl;
    }
    // $ANTLR end formalParameters


    // $ANTLR start moreFormals
    // ulNoActions.g:66:1: moreFormals returns [FormalParameter fp] : ( ',' cpt= compoundType id= identifier ) ;
    public final FormalParameter moreFormals() throws RecognitionException {
        FormalParameter fp = null;

        TypeNode cpt = null;

        Identifier id = null;


        try {
            // ulNoActions.g:67:17: ( ( ',' cpt= compoundType id= identifier ) )
            // ulNoActions.g:67:19: ( ',' cpt= compoundType id= identifier )
            {
            // ulNoActions.g:67:19: ( ',' cpt= compoundType id= identifier )
            // ulNoActions.g:67:20: ',' cpt= compoundType id= identifier
            {
            match(input,22,FOLLOW_22_in_moreFormals328); if (failed) return fp;
            pushFollow(FOLLOW_compoundType_in_moreFormals334);
            cpt=compoundType();
            _fsp--;
            if (failed) return fp;
            pushFollow(FOLLOW_identifier_in_moreFormals340);
            id=identifier();
            _fsp--;
            if (failed) return fp;
            if ( backtracking==0 ) {
              fp = new FormalParameter(cpt, id);
            }

            }


            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fp;
    }
    // $ANTLR end moreFormals


    // $ANTLR start functionBody
    // ulNoActions.g:70:1: functionBody returns [FunctionBody fb] : '{' (v= varDecl )* (s= statement )* '}' ;
    public final FunctionBody functionBody() throws RecognitionException {
        FunctionBody fb = null;

        VariableDeclaration v = null;

        Statement s = null;


        fb = new FunctionBody();
        try {
            // ulNoActions.g:72:17: ( '{' (v= varDecl )* (s= statement )* '}' )
            // ulNoActions.g:72:19: '{' (v= varDecl )* (s= statement )* '}'
            {
            match(input,23,FOLLOW_23_in_functionBody409); if (failed) return fb;
            // ulNoActions.g:72:23: (v= varDecl )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==TYPE) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // ulNoActions.g:72:24: v= varDecl
            	    {
            	    pushFollow(FOLLOW_varDecl_in_functionBody416);
            	    v=varDecl();
            	    _fsp--;
            	    if (failed) return fb;
            	    if ( backtracking==0 ) {
            	      fb.vdl.addVariable(v);
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // ulNoActions.g:72:63: (s= statement )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=IF && LA5_0<=PRINTLN)||(LA5_0>=FLOATCONSTANT && LA5_0<=FALSE)||LA5_0==ID||LA5_0==20||LA5_0==25) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // ulNoActions.g:72:64: s= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody427);
            	    s=statement();
            	    _fsp--;
            	    if (failed) return fb;
            	    if ( backtracking==0 ) {
            	      fb.sl.addStatement(s);
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,24,FOLLOW_24_in_functionBody432); if (failed) return fb;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fb;
    }
    // $ANTLR end functionBody


    // $ANTLR start varDecl
    // ulNoActions.g:75:1: varDecl returns [VariableDeclaration vd] : (ct= compoundType id= identifier ) ';' ;
    public final VariableDeclaration varDecl() throws RecognitionException {
        VariableDeclaration vd = null;

        TypeNode ct = null;

        Identifier id = null;


        try {
            // ulNoActions.g:76:17: ( (ct= compoundType id= identifier ) ';' )
            // ulNoActions.g:76:18: (ct= compoundType id= identifier ) ';'
            {
            // ulNoActions.g:76:18: (ct= compoundType id= identifier )
            // ulNoActions.g:76:19: ct= compoundType id= identifier
            {
            pushFollow(FOLLOW_compoundType_in_varDecl483);
            ct=compoundType();
            _fsp--;
            if (failed) return vd;
            pushFollow(FOLLOW_identifier_in_varDecl489);
            id=identifier();
            _fsp--;
            if (failed) return vd;
            if ( backtracking==0 ) {
              vd = new VariableDeclaration(ct, id); 
            }

            }

            match(input,25,FOLLOW_25_in_varDecl495); if (failed) return vd;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return vd;
    }
    // $ANTLR end varDecl


    // $ANTLR start statement
    // ulNoActions.g:79:1: statement returns [Statement s] options {backtrack=true; } : ( ';' | e= expr ';' | id= identifier exb= exprBracket '=' e1= expr ';' | IF '(' e= expr ')' b= block el= elseBlock | WHILE '(' e6= expr ')' blo= block | p= printstatement | pl= printlnstatement | r= RETURN (e5= expr )? ';' );
    public final Statement statement() throws RecognitionException {
        Statement s = null;

        Token r=null;
        Expression e = null;

        Identifier id = null;

        Expression exb = null;

        Expression e1 = null;

        Block b = null;

        Block el = null;

        Expression e6 = null;

        Block blo = null;

        PrintStatement p = null;

        PrintlnStatement pl = null;

        Expression e5 = null;


        try {
            // ulNoActions.g:81:18: ( ';' | e= expr ';' | id= identifier exb= exprBracket '=' e1= expr ';' | IF '(' e= expr ')' b= block el= elseBlock | WHILE '(' e6= expr ')' blo= block | p= printstatement | pl= printlnstatement | r= RETURN (e5= expr )? ';' )
            int alt7=8;
            switch ( input.LA(1) ) {
            case 25:
                {
                alt7=1;
                }
                break;
            case ID:
                {
                int LA7_2 = input.LA(2);

                if ( (synpred2()) ) {
                    alt7=2;
                }
                else if ( (synpred3()) ) {
                    alt7=3;
                }
                else {
                    if (backtracking>0) {failed=true; return s;}
                    NoViableAltException nvae =
                        new NoViableAltException("79:1: statement returns [Statement s] options {backtrack=true; } : ( ';' | e= expr ';' | id= identifier exb= exprBracket '=' e1= expr ';' | IF '(' e= expr ')' b= block el= elseBlock | WHILE '(' e6= expr ')' blo= block | p= printstatement | pl= printlnstatement | r= RETURN (e5= expr )? ';' );", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case FLOATCONSTANT:
            case INTEGERCONSTANT:
            case CHARCONSTANT:
            case STRINGCONSTANT:
            case TRUE:
            case FALSE:
            case 20:
                {
                alt7=2;
                }
                break;
            case IF:
                {
                alt7=4;
                }
                break;
            case WHILE:
                {
                alt7=5;
                }
                break;
            case PRINT:
                {
                alt7=6;
                }
                break;
            case PRINTLN:
                {
                alt7=7;
                }
                break;
            case RETURN:
                {
                alt7=8;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return s;}
                NoViableAltException nvae =
                    new NoViableAltException("79:1: statement returns [Statement s] options {backtrack=true; } : ( ';' | e= expr ';' | id= identifier exb= exprBracket '=' e1= expr ';' | IF '(' e= expr ')' b= block el= elseBlock | WHILE '(' e6= expr ')' blo= block | p= printstatement | pl= printlnstatement | r= RETURN (e5= expr )? ';' );", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // ulNoActions.g:81:20: ';'
                    {
                    match(input,25,FOLLOW_25_in_statement556); if (failed) return s;

                    }
                    break;
                case 2 :
                    // ulNoActions.g:82:20: e= expr ';'
                    {
                    pushFollow(FOLLOW_expr_in_statement581);
                    e=expr();
                    _fsp--;
                    if (failed) return s;
                    match(input,25,FOLLOW_25_in_statement583); if (failed) return s;
                    if ( backtracking==0 ) {
                      s = new ExpressionStatement(e);
                    }

                    }
                    break;
                case 3 :
                    // ulNoActions.g:84:20: id= identifier exb= exprBracket '=' e1= expr ';'
                    {
                    pushFollow(FOLLOW_identifier_in_statement635);
                    id=identifier();
                    _fsp--;
                    if (failed) return s;
                    pushFollow(FOLLOW_exprBracket_in_statement641);
                    exb=exprBracket();
                    _fsp--;
                    if (failed) return s;
                    match(input,26,FOLLOW_26_in_statement643); if (failed) return s;
                    pushFollow(FOLLOW_expr_in_statement648);
                    e1=expr();
                    _fsp--;
                    if (failed) return s;
                    match(input,25,FOLLOW_25_in_statement650); if (failed) return s;
                    if ( backtracking==0 ) {
                       s = new AssignmentStatement(id, exb, e1);
                    }

                    }
                    break;
                case 4 :
                    // ulNoActions.g:86:20: IF '(' e= expr ')' b= block el= elseBlock
                    {
                    match(input,IF,FOLLOW_IF_in_statement698); if (failed) return s;
                    match(input,20,FOLLOW_20_in_statement700); if (failed) return s;
                    pushFollow(FOLLOW_expr_in_statement706);
                    e=expr();
                    _fsp--;
                    if (failed) return s;
                    match(input,21,FOLLOW_21_in_statement708); if (failed) return s;
                    pushFollow(FOLLOW_block_in_statement714);
                    b=block();
                    _fsp--;
                    if (failed) return s;
                    pushFollow(FOLLOW_elseBlock_in_statement720);
                    el=elseBlock();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = new IfStatement(e, b, el);
                    }

                    }
                    break;
                case 5 :
                    // ulNoActions.g:87:20: WHILE '(' e6= expr ')' blo= block
                    {
                    match(input,WHILE,FOLLOW_WHILE_in_statement743); if (failed) return s;
                    match(input,20,FOLLOW_20_in_statement745); if (failed) return s;
                    pushFollow(FOLLOW_expr_in_statement751);
                    e6=expr();
                    _fsp--;
                    if (failed) return s;
                    match(input,21,FOLLOW_21_in_statement753); if (failed) return s;
                    pushFollow(FOLLOW_block_in_statement757);
                    blo=block();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = new WhileStatement(e6,blo);
                    }

                    }
                    break;
                case 6 :
                    // ulNoActions.g:88:20: p= printstatement
                    {
                    pushFollow(FOLLOW_printstatement_in_statement784);
                    p=printstatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                      s = p;
                    }

                    }
                    break;
                case 7 :
                    // ulNoActions.g:89:20: pl= printlnstatement
                    {
                    pushFollow(FOLLOW_printlnstatement_in_statement811);
                    pl=printlnstatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                      s =pl;
                    }

                    }
                    break;
                case 8 :
                    // ulNoActions.g:90:20: r= RETURN (e5= expr )? ';'
                    {
                    r=(Token)input.LT(1);
                    match(input,RETURN,FOLLOW_RETURN_in_statement838); if (failed) return s;
                    // ulNoActions.g:90:31: (e5= expr )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( ((LA6_0>=FLOATCONSTANT && LA6_0<=FALSE)||LA6_0==ID||LA6_0==20) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // ulNoActions.g:90:32: e5= expr
                            {
                            pushFollow(FOLLOW_expr_in_statement845);
                            e5=expr();
                            _fsp--;
                            if (failed) return s;

                            }
                            break;

                    }

                    match(input,25,FOLLOW_25_in_statement849); if (failed) return s;
                    if ( backtracking==0 ) {
                      s = new ReturnStatement(e5, r.getLine(), r.getCharPositionInLine());
                    }

                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return s;
    }
    // $ANTLR end statement


    // $ANTLR start printstatement
    // ulNoActions.g:93:1: printstatement returns [PrintStatement p] : PRINT e= expr ';' ;
    public final PrintStatement printstatement() throws RecognitionException {
        PrintStatement p = null;

        Expression e = null;


        try {
            // ulNoActions.g:94:17: ( PRINT e= expr ';' )
            // ulNoActions.g:94:19: PRINT e= expr ';'
            {
            match(input,PRINT,FOLLOW_PRINT_in_printstatement896); if (failed) return p;
            pushFollow(FOLLOW_expr_in_printstatement902);
            e=expr();
            _fsp--;
            if (failed) return p;
            match(input,25,FOLLOW_25_in_printstatement904); if (failed) return p;
            if ( backtracking==0 ) {
               p = new PrintStatement(e); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return p;
    }
    // $ANTLR end printstatement


    // $ANTLR start printlnstatement
    // ulNoActions.g:97:1: printlnstatement returns [PrintlnStatement p] : PRINTLN e= expr ';' ;
    public final PrintlnStatement printlnstatement() throws RecognitionException {
        PrintlnStatement p = null;

        Expression e = null;


        try {
            // ulNoActions.g:98:17: ( PRINTLN e= expr ';' )
            // ulNoActions.g:98:19: PRINTLN e= expr ';'
            {
            match(input,PRINTLN,FOLLOW_PRINTLN_in_printlnstatement951); if (failed) return p;
            pushFollow(FOLLOW_expr_in_printlnstatement957);
            e=expr();
            _fsp--;
            if (failed) return p;
            match(input,25,FOLLOW_25_in_printlnstatement959); if (failed) return p;
            if ( backtracking==0 ) {
               p = new PrintlnStatement(e); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return p;
    }
    // $ANTLR end printlnstatement


    // $ANTLR start elseBlock
    // ulNoActions.g:101:1: fragment elseBlock returns [Block b] : ( ELSE blo= block )? ;
    public final Block elseBlock() throws RecognitionException {
        Block b = null;

        Block blo = null;


         b = null; 
        try {
            // ulNoActions.g:104:17: ( ( ELSE blo= block )? )
            // ulNoActions.g:104:19: ( ELSE blo= block )?
            {
            // ulNoActions.g:104:19: ( ELSE blo= block )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ELSE) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // ulNoActions.g:104:20: ELSE blo= block
                    {
                    match(input,ELSE,FOLLOW_ELSE_in_elseBlock1015); if (failed) return b;
                    pushFollow(FOLLOW_block_in_elseBlock1021);
                    blo=block();
                    _fsp--;
                    if (failed) return b;
                    if ( backtracking==0 ) {
                      b = blo ;
                    }

                    }
                    break;

            }


            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return b;
    }
    // $ANTLR end elseBlock


    // $ANTLR start block
    // ulNoActions.g:107:1: block returns [Block block] : '{' (s= statement )* '}' ;
    public final Block block() throws RecognitionException {
        Block block = null;

        Statement s = null;


        block = new Block();
        try {
            // ulNoActions.g:109:17: ( '{' (s= statement )* '}' )
            // ulNoActions.g:109:19: '{' (s= statement )* '}'
            {
            match(input,23,FOLLOW_23_in_block1075); if (failed) return block;
            // ulNoActions.g:109:23: (s= statement )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( ((LA9_0>=IF && LA9_0<=PRINTLN)||(LA9_0>=FLOATCONSTANT && LA9_0<=FALSE)||LA9_0==ID||LA9_0==20||LA9_0==25) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // ulNoActions.g:109:24: s= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block1082);
            	    s=statement();
            	    _fsp--;
            	    if (failed) return block;
            	    if ( backtracking==0 ) {
            	      block.sl.addStatement(s);
            	    }

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);

            match(input,24,FOLLOW_24_in_block1088); if (failed) return block;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return block;
    }
    // $ANTLR end block


    // $ANTLR start expr
    // ulNoActions.g:112:1: expr returns [Expression e] : e1= exprEquiv ( '==' e2= exprEquiv )* ;
    public final Expression expr() throws RecognitionException {
        Expression e = null;

        Expression e1 = null;
